Add UI changes for web
Makes quit button close tab and adds Screen to address audio autoplay bug

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .godot/
 # Don't save any of the real builds, but keep the existing build/web/index.html
 build
+# Don't include any temp files.
+*.tmp
