--- a/source/export_presets.cfg
+++ b/source/export_presets.cfg
@@ -40,6 +40,6 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/background_color=Color(0.09019608, 0.03137255, 0.007843138, 1)
 threads/emscripten_pool_size=8
 threads/godot_pool_size=4
